[gd_scene load_steps=7 format=3 uid="uid://bjq51euj3w842"]

[ext_resource type="Script" path="res://Scripts/Menus/keybindsMenu.gd" id="1_ah15h"]
[ext_resource type="Texture2D" uid="uid://e6yba23ue0sd" path="res://Assets/GUI/FinalGUIAssets/FinalBackground.png" id="2_5ewyp"]
[ext_resource type="FontFile" uid="uid://bivxf3m2badh3" path="res://Assets/Font/PixelSerif_16px_v02.otf" id="3_edheu"]
[ext_resource type="Theme" uid="uid://yk36rhjn0d1b" path="res://Themes/MenuButtons.tres" id="4_t0iuv"]
[ext_resource type="PackedScene" uid="uid://17xktiapa28d" path="res://Scenes/Menus/HotkeyRebindButton.tscn" id="5_up8va"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7oan2"]

[node name="KeybindsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ah15h")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5ewyp")

[node name="OuterMargins" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 78
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 79

[node name="Content" type="VBoxContainer" parent="OuterMargins"]
layout_mode = 2
theme_override_constants/separation = 60

[node name="TitleandQuitBox" type="HBoxContainer" parent="OuterMargins/Content"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme_override_constants/separation = 0

[node name="Sep1" type="Control" parent="OuterMargins/Content/TitleandQuitBox"]
custom_minimum_size = Vector2(593.5, 100)
layout_mode = 2

[node name="Title" type="Label" parent="OuterMargins/Content/TitleandQuitBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 15
theme_override_constants/shadow_offset_y = 15
theme_override_constants/outline_size = 24
theme_override_constants/shadow_outline_size = 0
theme_override_fonts/font = ExtResource("3_edheu")
theme_override_font_sizes/font_size = 122
text = "Keybinds
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sep2" type="Control" parent="OuterMargins/Content/TitleandQuitBox"]
custom_minimum_size = Vector2(426, 100)
layout_mode = 2

[node name="QuitButton" type="Button" parent="OuterMargins/Content/TitleandQuitBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme = ExtResource("4_t0iuv")
theme_override_fonts/font = ExtResource("3_edheu")
theme_override_font_sizes/font_size = 32
text = "Quit"

[node name="MarginContainer" type="MarginContainer" parent="OuterMargins/Content"]
custom_minimum_size = Vector2(0, 623)
layout_mode = 2
theme_override_constants/margin_left = 200
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 200
theme_override_constants/margin_bottom = 0

[node name="Modes" type="Panel" parent="OuterMargins/Content/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="OuterMargins/Content/MarginContainer/Modes"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 15.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="ScrollContainer" type="ScrollContainer" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer"]
custom_minimum_size = Vector2(1300, 0)
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Player1Section" type="Label" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_edheu")
theme_override_font_sizes/font_size = 64
text = "PLAYER 1:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpPlayer1" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("5_up8va")]
layout_mode = 2
action_name = "up_player_1"

[node name="DownPlayer1" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("5_up8va")]
layout_mode = 2
action_name = "down_player_1"

[node name="LeftPlayer1" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("5_up8va")]
layout_mode = 2

[node name="RightPlayer1" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("5_up8va")]
layout_mode = 2
action_name = "right_player_1"

[node name="BombPlayer1" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("5_up8va")]
layout_mode = 2
action_name = "bomb_player_1"

[node name="PowerupPlayer1" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("5_up8va")]
layout_mode = 2
action_name = "box_player_1"

[node name="SectionSep12" type="HSeparator" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 36
theme_override_styles/separator = SubResource("StyleBoxEmpty_7oan2")

[node name="Player2Section" type="Label" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_edheu")
theme_override_font_sizes/font_size = 64
text = "PLAYER 2:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpPlayer2" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("5_up8va")]
layout_mode = 2
action_name = "up_player_2"

[node name="DownPlayer2" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("5_up8va")]
layout_mode = 2
action_name = "down_player_2"

[node name="LeftPlayer2" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("5_up8va")]
layout_mode = 2
action_name = "left_player_2"

[node name="RightPlayer2" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("5_up8va")]
layout_mode = 2
action_name = "right_player_2"

[node name="BombPlayer2" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("5_up8va")]
layout_mode = 2
action_name = "bomb_player_2"

[node name="PowerUpPlayer2" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("5_up8va")]
layout_mode = 2
action_name = "box_player_2"

[node name="SectionSep23" type="HSeparator" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 36
theme_override_styles/separator = SubResource("StyleBoxEmpty_7oan2")

[node name="Player3Section" type="Label" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_edheu")
theme_override_font_sizes/font_size = 64
text = "PLAYER 3:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpPlayer3" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("5_up8va")]
layout_mode = 2
action_name = "up_player_3"

[node name="DownPlayer3" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("5_up8va")]
layout_mode = 2
action_name = "down_player_3"

[node name="LeftPlayer3" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("5_up8va")]
layout_mode = 2
action_name = "left_player_3"

[node name="RightPlayer3" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("5_up8va")]
layout_mode = 2
action_name = "right_player_3"

[node name="BombPlayer3" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("5_up8va")]
layout_mode = 2
action_name = "bomb_player_3"

[node name="PowerupPlayer3" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("5_up8va")]
layout_mode = 2
action_name = "box_player_3"

[node name="BottomSep" type="HSeparator" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_7oan2")

[node name="ResetToDefault" type="Button" parent="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("4_t0iuv")
theme_override_fonts/font = ExtResource("3_edheu")
theme_override_font_sizes/font_size = 32
text = "Reset to default"

[node name="BackBox" type="HBoxContainer" parent="OuterMargins/Content"]
layout_mode = 2

[node name="Sep1" type="Control" parent="OuterMargins/Content/BackBox"]
custom_minimum_size = Vector2(1488, 50)
layout_mode = 2

[node name="BackButton" type="Button" parent="OuterMargins/Content/BackBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 100)
layout_mode = 2
theme = ExtResource("4_t0iuv")
theme_override_fonts/font = ExtResource("3_edheu")
theme_override_font_sizes/font_size = 32
text = "Back"

[connection signal="pressed" from="OuterMargins/Content/TitleandQuitBox/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="OuterMargins/Content/MarginContainer/Modes/MarginContainer/ScrollContainer/VBoxContainer/ResetToDefault" to="." method="_on_reset_to_default_pressed"]
[connection signal="pressed" from="OuterMargins/Content/BackBox/BackButton" to="." method="_on_back_button_pressed"]
